# FusionEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
LearnOpenGL/: Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  Shader.cpp  Shader.h  main.cpp
LearnOpenGL/assets/shaders/: fragment.frag  vertex.vert
NeuralHook/: CMakeLists.txt  main.cpp
OpenGLSnake/: ASCIIRenderer.cpp  ASCIIRenderer.h  Application.cpp  Application.h  CMakeLists.txt  Game.cpp  Game.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  assets.h  main.cpp  settings.h
OpenGLSnake/Game/: Game.cpp  Game.h  Player.cpp  Player.h  Tile.h
OpenGLSnake/Neural/: NeuralTexture.h
OpenGLSnake/Renderer/: Mesh.cpp  Mesh.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp
OpenGLSnake/assets/shaders/: fragment.frag  neural.vert  present.vert
Python/: cnn.py  dataloader.py  export.py  mlp.py  pnn.py  requirements.txt  test.py  train.py  utility.py
Pytorch/: CMakeLists.txt
Pytorch/src/: main.cpp
Pytorch/src/datasets/: reds.cpp
Pytorch/src/metrics/: metrics.cpp  metrics.h
Pytorch/src/models/: sisr.h
Pytorch/src/utils/: utils.h
Pytorch/tests/: test_model.cpp
Snake/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  input.cpp  input.h  main.cpp  settings.h  types.h
code/C++/: ASCIIRenderer.cpp  ASCIIRenderer.h  Application.cpp  Application.h  CMakeLists.txt  assets.h  settings.h
code/C++/Game/: Game.cpp  Game.h  Player.cpp  Player.h  Tile.h
code/C++/Input/: GLFWInput.cpp  GLFWInput.h  IInput.h  TerminalInput.cpp  TerminalInput.h
code/C++/Neural/: NeuralRenderer.h
code/C++/Renderer/: ASCIIRenderer.cpp  ASCIIRenderer.h  FrameBuffer.cpp  FrameBuffer.h  IRenderer.h  Mesh.cpp  Mesh.h  NeuralRenderer.cpp  NeuralRenderer.h  NeuralTexture.cpp  NeuralTexture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderTexture.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Sprite.h  Texture.h
code/C++/Window/: GLFWWindow.cpp  GLFWWindow.h  IWindow.h
code/C++/assets/shaders/: neural.frag  present.frag  vertex.vert
code/Python/: cnn.py  dataloader.py  export.py  loss.py  requirements.txt  test.py  train.py  utility.py
code/Python/models/: cnn.py  mlp.py  pnn.py
code/Tutorial_OpenGL/: Assets.h  Camera.h  Game.h  Shader.h
datasets/: urban100.cpp  urban100.h
img/: example.txt
metrics/: metrics.cpp
models/: sisr.cpp
src/: main.cpp
src/datasets/: reds.h  urban100.cpp  urban100.h
tests/: test_dataset.cpp  test_model.cpp
utils/: utils.h
